--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Urna Eletrônica</title>
 </head>
 <body>
-    
+    <button type="button" onclick="urnaEletronica()">CLIQUE AQUI</button>
+    <script src="/urnaEletronica.js"></script>
 </body>
 </html>
