feat(urnaEletronica.js): inclusão de novas funcionalidades para a votação

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Urna Eletrônica</title>
 </head>
 <body>
-    <button type="button" onclick="urnaEletronica()">CLIQUE AQUI</button>
+    <button type="button" onclick="urnaEletronica()">Clique aqui para iniciar a votação</button>
     <script src="/urnaEletronica.js"></script>
 </body>
 </html>
