fix(index.html): correção de link para arquivo urnaEletronica.js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <button type="button" onclick="urnaEletronica()">Clique aqui para iniciar a votação</button>
-    <script src="/urnaEletronica.js"></script>
+    <script src="urnaEletronica.js"></script>
 </body>
 </html>
